--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -47,7 +47,25 @@
                   <span class="fas fa-gifts" aria-hidden="true"></span>
                   Logout
                 </a>
-              </li>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                [routerLink]="['/login']"
+                [routerLinkActive]="['active']"
+                *ngIf="_authS.usuario.uid"
+              >
+                {{_authS.usuario.nombre}}
+              </a>
+            </li>
+            <li>
+              <img 
+                src="{{_authS.usuario.photoURL}}" 
+                height="40px" 
+                alt="perfil" 
+                class="rounded-circle"
+                *ngIf="_authS.usuario.uid">
+            </li>
           </ul>
     </div>
   </nav>
